Simple copy changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <div class='homepage-header'>
           <h1>Hello -</h1>
           <h3><a href='About.html' style='text-decoration: none; color: #313131'>I'm Jackson,</a> a UX designer and developer.</h3>
-          <p>I focus on how technology can deliver better information to improve people's lives and communities. I was a master's student at the University of Michigan, and I'm searching for new work.</p>
+          <p>I focus on how technology can deliver better information to improve people's lives and communities.</p>
+          <p>I have a master's degree in UX Design and Research from the University of Michigan, and I'm currently the UX Engineer at Encore Performance Gear.</p>
         </div>
 
         <!-- <div class='row margin-bottom-2'>
@@ -126,7 +127,7 @@
           </div>
           <div class='copy-low-emphasis condensed-text-wrapper'>
             <p>Built with ❤️ in Ann Arbor</p>
-            <p class="footer-copyright">&#169; 2019 Jackson Hammond</p>
+            <p class="footer-copyright">&#169; 2020 Jackson Hammond</p>
           </div>
         </div>
       </div>
