Resume opens in new tab now

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a class="navbar-brand" aria-label="My Logo" href="#">
           <img src="assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
-        <a href="assets/Jackson_Hammond_Resume.pdf">RESUME</a>
+        <a href="assets/Jackson_Hammond_Resume.pdf" target='_blank'>RESUME</a>
         <a href="About.html">ABOUT</a>
         <a href="#">WORK</a>
         <a href="javascript:void(0);" class="icon" onclick="navBarHandling()">
