Last updates from Ians feedback

--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -59,7 +59,7 @@
             <div class='project-subtitle'>Evaluating onboarding resources.</div>
           </div>
           <div class='col-half'>
-            <p>A project focused on user research, needs assessment, and usability testing by Corzetti Labs.</p>
+            <p>A group project focused on user research, needs assessment, and usability testing.</p>
             <div class='project-details'>
               <p>User Experience Researcher / Usability Tester</p>
               <p>Heuristic Evaluation / Surveys / Preference Testing / Usability Testing</p>
@@ -78,8 +78,8 @@
         <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <h2>Project Summary</h2>
-            <p>My team, Corzetti Labs, and I partnered with Autodesk to assess the learning and onboarding materials for their Revit LT software, a program designed for architects to model their designs in three dimensions. They were interested to learn how well supported new Revit LT users are with the learning content available to them, as well as how discoverable and useful it is for users.</p>
-            <p>The key user groups they were interested in are were Revit LT users who don't have any prior CAD experience, primarily undergraduate architectural students, and architects who switch from other CAD software to Revit LT.</p>
+            <p>I was part of a team of experts who partnered with Autodesk to assess the learning and onboarding materials for their Revit LT software, a program designed for architects to model their designs in three dimensions. They were interested to learn how well supported new Revit LT users are with the learning content available to them, as well as how discoverable and useful it is for users.</p>
+            <p>The key user groups they were interested in were Revit LT users who don't have any prior CAD experience, primarily undergraduate architectural students, and architects who switch from other CAD software to Revit LT.</p>
           </div>
         </div>
 
@@ -153,7 +153,7 @@
         <div class='row margin-bottom-4'>
           <div class='col-half'>
             <h3>5. Heuristic Evaluation</h3>
-            <p>Using the 10 usability heuristics from Jakob Nielsen we investigated the information structure and usability of Revit LT’s sources of help documentation. I focused on the help documentation within the software, but also evaluated the online resources and aggregated those findings with my teammates.</p>
+            <p>Using the <a href='https://www.nngroup.com/articles/ten-usability-heuristics/' target='_blank'>10 usability heuristics from Jakob Nielsen</a> we investigated the information structure and usability of Revit LT’s sources of help documentation. I focused on the help documentation within the software, but also evaluated the online resources and aggregated those findings with my teammates.</p>
             <h4>Key Findings</h4>
             <ul>
               <li>The heuristic most critically violated was “Error prevention and recovery”</li>
