Shorten MapMe reflection

--- a/About.html
+++ b/About.html
@@ -53,7 +53,7 @@
           <div class='col-half'>
             <div class='project-title'>Hi, I'm Jackson.</div>
             <div class='project-subtitle'>It's nice to meet you.</div>
-            <p>I’m a designer and creator who cares about the environment, privacy, and which book to read next.</p>
+            <p>I’m an expert designer and creator who cares about the environment, privacy, and which book to read next.</p>
             <p>With UX Design I can satisfy my desire to create beautiful things, positively impact the world, and bring people joy. I recently completed my master’s in UX Research and Design with a focus in web development at the University of Michigan's School of Information, and I’m searching for full-time positions.</p>
 
             <p>I love data visualization and studying how it can help people make sense of complex information, and I bring that fascination to my work. I conduct research to discover users’ needs and iteratively design ways to meet them. I also build the prototypes for further testing and research, whether through full-stack web development or physical prototyping with microcontrollers.</p>
