--- a/projects/mapme.html
+++ b/projects/mapme.html
@@ -195,14 +195,14 @@
           <div class='text-wrapper'>
             <h2>Reflection</h2>
             <p>We learned a lot about how people shop for items in grocery stores during this design process. We feel like we incorporated well what our research taught us, but there are certainly limitations to this design and areas that could be improved or further explored.</p>
-            <h3>Design Limitations</h3>
+            <!-- <h3>Design Limitations</h3>
             <p>Currently, this design requires users to own and use a smartphone to use this item-finding system. This is something we tried to avoid at the beginning of our design process, but our research led us to a smartphone-centric design.</p>
             <p>Additionally, privacy remains a concern with a system like this. We gave users a clear and explicit way to disconnect their phone from the grocery cart, but users are also being tracked every step of the way through the store. Further research is required to see how much this bothers our target users.</p>
             <p>When it came down to considering different system architecture and what our product could look or function like, we considered ingraining privacy in the conceptual design of the product. During a storming session we questioned whether we actually needed the cart. Ultimately we decided that the cart acts as a sort of conduit so that the dozens of beacons across the store aren’t all connecting with the phone. We believed that this adds an extra layer of security. We believe that the cart-to-phone data exchange will include built in encryption/anonymization so the person’s identity isn’t directly connected and collected with the cart’s location information.</p>
             <p>This system also depends on how well a network of indoor positioning sensors can support a large number of users in a small space. For the sake of this project we are assuming that will work. However, our next steps should be to build the network we’re imagining and perform stress tests. How many users can it support in a large area? A small area? How many sensors are needed? How precisely can we calculate the user’s location?</p>
             <h3>Demo Insights</h3>
             <p>While preparing and performing the demo we learned that users might be nervous about leaving their phones mounted on their grocery cart. They imagined it would be easy to steal while they’re distracted. The next physical prototype needs to include some sort of security device to ease those worries.</p>
-            <h3>If we did it all again</h3>
+            <h3>If we did it all again</h3> -->
             <p>Overall, we believe this research process could have benefitted from a more thorough competitive analysis, or more research into technology that’s currently being used in shopping situations more generally. Additionally, we lacked strong evidence for making claims about our users because our sample sizes were small. Gathering more initial data through a survey would have given us a better picture of our target users, and would have served as a nice way to collect contact info for our future research methods.</p>
             <hr>
             <h4>Sources</h4>
