Full encore project draft is complete

--- a/projects/encore.html
+++ b/projects/encore.html
@@ -56,7 +56,7 @@
         <div class='row margin-top-4 margin-bottom-4'>
           <div class='col-half'>
             <div class='project-title'>Encore Performance Gear</div>
-            <div class='project-subtitle'>Agile Dev and UX</div>
+            <div class='project-subtitle'>User Centered Agile Development</div>
           </div>
           <div class='col-half'>
             <p>A group project to design and develop an e-commerce web app.</p>
@@ -67,10 +67,15 @@
             </div>
           </div>
         </div>
+        <div class='row'>
+          <div class='col-full'>
+            <img  src='../assets/encore/listings mockup.png' alt="A mockup showing a collections of listing from the site">
+          </div>
+        </div>
       </div>
 
       <div class="container">
-        <div class="row margin-bottom-8">
+        <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <p>Competitive drumlines and marching ensembles have a significant amount of used equipment that they need to sell at the end of each season. Many of these transactions take place on Facebook Marketplace or expensive online consignment shops, neither of which fully meet users’ needs.</p>
           </div>
@@ -80,6 +85,7 @@
           <div class="text-wrapper">
             <h2>Solution</h2>
             <p>Our team of experts created an online marketplace for the directors and designers of these ensembles to buy and sell their used equipment. We deployed a minimal viable product to Heroku using React with Redux and a RESTful Django API.</p>
+            <img src='../assets/encore/encore listing.png' alt='The screen for the details of a specific listing' class='screenshot'>
           </div>
         </div>
 
@@ -119,7 +125,7 @@
         <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <h2>Current State</h2>
-            <p>Replace this next.</p>
+            <p>This project is ongoing. We are currently using the feedback from our user tests to make large visual and design updates to the app, and details will be added here once it's deployed. You can <a href="mailto:jbhammon@umich.edu">email me</a> if you'd like to learn more about the current status of the project, I'd love to chat with you about it.</p>
           </div>
         </div>
 
