Sometimes done is the best feature

--- a/projects/encore.html
+++ b/projects/encore.html
@@ -77,14 +77,14 @@
       <div class="container">
         <div class="row margin-bottom-4">
           <div class="text-wrapper">
-            <p>Competitive drumlines and marching ensembles have a significant amount of used equipment that they need to sell at the end of each season. Many of these transactions take place on Facebook Marketplace or expensive online consignment shops, neither of which fully meet users’ needs.</p>
+            <p>Competitive drumlines and marching ensembles have a significant amount of used equipment that they need to sell at the end of each season. Many of these transactions take place on Facebook Marketplace or expensive online consignment shops, neither of which fully meet users’ needs. Over four months my team and I worked with this drumline community to design and implement a solution that prioritized them.</p>
           </div>
         </div>
 
         <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <h2>Solution</h2>
-            <p>Our team of experts created an online marketplace for the directors and designers of these ensembles to buy and sell their used equipment. We deployed a minimal viable product to Heroku using React with Redux and a RESTful Django API.</p>
+            <p>Our team of experts created Encore Performance Gear, an online marketplace for the directors and designers of these ensembles to buy and sell their used equipment. We deployed a minimal viable product to Heroku using React with Redux and a RESTful Django API.</p>
             <img src='../assets/encore/encore listing.png' alt='The screen for the details of a specific listing' class='screenshot'>
           </div>
         </div>
@@ -145,7 +145,7 @@
           </div>
           <div class='copy-low-emphasis condensed-text-wrapper'>
             <p>Built with ❤️ in Ann Arbor</p>
-            <p class="footer-copyright">&#169; 2019 Jackson Hammond</p>
+            <p class="footer-copyright">&#169; 2020 Jackson Hammond</p>
           </div>
         </div>
       </div>
