About page updates

--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
       <!-- Navbar, courtesy of W3Schools -->
       <!-- https://www.w3schools.com/howto/howto_js_topnav_responsive.asp -->
       <div class="topnav" id="myTopnav">
-        <a class="navbar-brand" aria-label="My Logo" href="#">
+        <a class="navbar-brand" aria-label="My Logo" href="index.html">
           <img src="assets/SVG/Logo_color.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
         <a href="assets/Jackson_Hammond_Resume.pdf" target='_blank'>RESUME</a>
@@ -56,7 +56,7 @@
             <p>I’m an expert designer and creator who cares about the environment, privacy, and which book to read next.</p>
             <p>With UX Design I can satisfy my desire to create beautiful things, positively impact the world, and bring people joy. I recently completed my master’s in UX Research and Design with a focus in web development at the University of Michigan's School of Information, and I’m searching for full-time positions.</p>
 
-            <p>I love data visualization and studying how it can help people make sense of complex information, and I bring that fascination to my work. I conduct research to discover users’ needs and iteratively design ways to meet them. I also build the prototypes for further testing and research, whether through full-stack web development or physical prototyping with microcontrollers.</p>
+            <p>My design process focuses on conducting research to discover users’ needs and iteratively designing ways to meet them. I also enjoy building prototypes for further testing and research, whether through full-stack web development or physical prototyping with microcontrollers.</p>
 
             <p>In my free time I like to get outside and stay active, read, cook, brew coffee, and practice drum set.</p>
           </div>
