Revised some of the copy to include the word expert when it makes sense

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -83,7 +83,7 @@
         <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <h2>A New Degree Details Experience</h2>
-            <p>The content library on Michigan Online was growing rapidly, and their catalog of online degrees was becoming increasingly popular. Pursuing an online degree from the University of Michigan is a large investment of time and money, and many learners want to do research before making their decision. An improved experience needed to be designed and developed to give learners the detailed information they’re seeking during their research.</p>
+            <p>The content library on Michigan Online was growing rapidly, and their catalog of online degrees was becoming increasingly popular. Pursuing an online degree from the University of Michigan is a large investment of time and money, and many learners want to do research before making their decision. I was responsible for designing and developing an improved experience to give learners the detailed information they were seeking during their research.</p>
           </div>
         </div>
 
