--- a/projects/mapme.html
+++ b/projects/mapme.html
@@ -95,7 +95,7 @@
             <h2>Motivation</h2>
             <p>Most people have probably had shopping trips that looked and felt like this:</p>
             <img src='../assets/mapme/messy route.jpg' alt='Back tracking in the grocery store'>
-            <p>We observed that shoppers are usually crisscrossing grocery stores while shopping. The reason, of course, is because they have difficulty finding every last item or forgetting to pick up items along their way. If shoppers are not familiar with the grocery store, it will take much more time to find items.</p>
+            <p>Our team of experts and I observed that shoppers are usually crisscrossing grocery stores while shopping. The reason, of course, is because they have difficulty finding every last item or forgetting to pick up items along their way. If shoppers are not familiar with the grocery store, it will take much more time to find items.</p>
 
             <p>A recent Gallup Poll shows that 82% of US adults go grocery shopping in a grocery store at least once a week (Jones, 2019). Through our research and interviews during our design process, we also found that relatively <span style='font-weight: bold;'>everyone wants to see coupons and sales information while they shop.</span> When all these ideas present, it was an excellent opportunity for us to find a better solution to help improve grocery shopping efficiency.</p>
           </div>
