Moved new copy into the project page, still need new screenshots

--- a/projects/encore.html
+++ b/projects/encore.html
@@ -56,13 +56,12 @@
         <div class='row margin-top-4 margin-bottom-4'>
           <div class='col-half'>
             <div class='project-title'>Encore Performance Gear</div>
-            <div class='project-subtitle'>User Centered Agile Development</div>
           </div>
           <div class='col-half'>
             <p>A group project to design and develop an e-commerce web app.</p>
             <div class='project-details'>
-              <p>User Researcher / Product Designer / Full Stack Developer / Build Master</p>
-              <p>User Interviews / Usability Testing / Prototyping / React + Redux / Django</p>
+              <p>User Researcher / Product Designer / Full Stack Developer</p>
+              <p>User Interviews / Prototyping / Usability Testing  / React + Redux / Django</p>
               <p>Jan. - Apr. 2020</p>
             </div>
           </div>
@@ -78,6 +77,26 @@
         <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <p>Competitive drumlines and marching ensembles have a significant amount of used equipment that they need to sell at the end of each season. Many of these transactions take place on Facebook Marketplace or expensive online consignment shops, neither of which fully meet users’ needs. Over four months my team and I worked with this drumline community to design and implement a solution that prioritized them.</p>
+            <p>Encore Performance Gear is a community-run platform built specifically for directors and designers of competitive drumlines and marching ensembles.</p>
+            <p>I assisted with conducting user research, creating high fidelity mockups, and translating mockups into clean, maintainable frontend code. I was also responsible for managing our version control process with Git and our production app deployment process.</p>
+          </div>
+        </div>
+
+        <div class="row margin-bottom-4">
+          <div class="text-wrapper">
+            <h2>Need for Searching and Filtering</h2>
+            <p>Our initial user research showed us that these users struggled on Facebook Marketplace to find the equipment they were searching for. The platform lacked any specific filters or categories for the marching arts community.</p>
+            <p>We made sure to design the site around a group of categories that was meaningful for our intended users to make them feel like the platform was a place built for them. We also collect more information from sellers than a title and description for a listing. Encore Performance lets them specify the brand, category, and condition of their equipment. This improved the sellers’ experiences by making them feel the site was built for them, and improved buyers’ experiences by improving their search results on the site.</p>
+            <img src='../assets/encore/encore listing.png' alt='The screen for the details of a specific listing' class='screenshot'>
+          </div>
+        </div>
+
+        <div class="row margin-bottom-4">
+          <div class="text-wrapper">
+            <h2>Building Trust Between Users</h2>
+            <p>Our research also taught the team that trust was a large factor with these large purchases. Often equipment in this community is bought and sold for thousands of dollars, and people need to trust who they’re haggling with.</p>
+            <p>We included profiles and direct messaging to help users feel better about who they’re interacting with on the site. Users can see the name and picture of a person selling equipment they’re interested in, and then they can message them to agree on a price without sharing any personal contact information.</p>
+            <img src='../assets/encore/encore listing.png' alt='The screen for the details of a specific listing' class='screenshot'>
           </div>
         </div>
 
@@ -86,39 +105,6 @@
             <h2>Solution</h2>
             <p>Our team of experts created Encore Performance Gear, an online marketplace for the directors and designers of these ensembles to buy and sell their used equipment. We deployed a minimal viable product to Heroku using React with Redux and a RESTful Django API.</p>
             <img src='../assets/encore/encore listing.png' alt='The screen for the details of a specific listing' class='screenshot'>
-          </div>
-        </div>
-
-        <div class="row margin-bottom-4">
-          <div class="text-wrapper">
-            <h2>Value Proposition</h2>
-            <p>Encore Performance Gear is a community-run platform built specifically for directors and designers of competitive drumlines and marching ensembles. The site builds trust with user profiles that provides buyers information about the users they’re buying from. Intuitive functionality matches the mental model users have from other e-commerce site, creating a seamless experience throughout the process.</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="text-wrapper">
-            <h2>Key Features</h2>
-            <ol>
-              <li>Create accounts for individual users and organizations</li>
-              <li>Draft and publish listings for equipment</li>
-              <li>Quickly find the equipment you are looking for with intuitive text search, sorting, and filtering</li>
-              <li>Message users to negotiate sales and purchases of equipment</li>
-              <li>Notify buyers when items are no longer available by marking listings as “sale pending” or “sold”</li>
-              <li>Opt in/out of receiving email notifications when you receive messages</li>
-            </ol>
-          </div>
-        </div>
-
-        <div class="row margin-bottom-4">
-          <div class="text-wrapper">
-            <h2>Process</h2>
-            <p>Our team of experts used a user-centered agile development process that incorporated UX methodologies into five two-week development sprints.</p>
-            <p>Sprint 1: Initial user research, configuration and integration of Django API and React</p>
-            <p>Sprint 2: Wireframes and high fidelity mockups shared with product owner, account creation and basic database read/write operations integrated</p>
-            <p>Sprint 3: Mockup iterations and refinements, photo upload integrated, significant UI improvements</p>
-            <p>Sprint 4: Messaging integrated, deployment to Heroku accomplished</p>
-            <p>Sprint 5: User testing of MVP conducted, user feedback implemented</p>
           </div>
         </div>
 
