--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h1>Hello -</h1>
           <h3><a href='About.html' style='text-decoration: none; color: #313131'>I'm Jackson,</a> a UX designer and developer.</h3>
           <p>I focus on how technology can deliver better information to improve people's lives and communities.</p>
-          <p>I have a master's degree in UX Design and Research from the University of Michigan, and I'm currently the UX Engineer at Encore Performance Gear.</p>
+          <p>I have a master's degree in UX Design and Research from the University of Michigan, and I'm currently a UX Designer at Mastery Technologies.</p>
         </div>
 
         <!-- <div class='row margin-bottom-2'>
